update align text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div> 
         <div class="row main-card">
           <div class="col">
-            <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&to=atmakarimang@gmail.com" class="btn btn-gmail" target="_blank"><i class="fas fa-envelope fa-lg"></i> &nbsp; atmakarimang@gmail.com</a>
+            <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&to=atmakarimang@gmail.com" class="btn btn-gmail" target="_blank"><i class="fas fa-envelope fa-lg"></i> &nbsp; Email</a>
           </div>
         </div> 
       </div>
