update html link portofolio

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="main.js"></script>
   <!--Font Awesome-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Bootstrap CSS -->
@@ -22,6 +23,7 @@
       </div>
       <div class="row">
         <h3 class="name">Atma Karimang Soebekty Tupelu</h3>
+        <button onclick="myFunction()">Change</button>
       </div>
       <div class="row">
         <p class="profesi">Web Programmer</p>
@@ -52,7 +54,7 @@
           </div> 
         <div class="row main-card">
           <div class="col">
-            <a href="#" class="btn btn-portfolio" target="_blank"><i class="fas fa-globe fa-lg"></i> &nbsp; Portofolio</a>
+            <a href="https://atma-portofolio.netlify.app/" class="btn btn-portfolio" target="_blank"><i class="fas fa-globe fa-lg"></i> &nbsp; Portofolio</a>
           </div>
         </div> 
         <div class="row main-card">
