--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <img src="src/fotoku.jpg" alt="" class="img-profile">
         </div>
       </div>
-      <!--div>class="row"> 
+      <div>class="row"> 
         <h3 class="name">Atma Karimang Soebekty Tupelu</h3>
-        <button onclick="myFunction()">Change</button>
-      </div-->
+        <!-->button onclick="myFunction()">Change</button-->
+      </div>
       <div class="row">
         <p class="profesi">Web Programmer</p>
       </div>
