--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <div>class="row"> 
         <h3 class="name">Atma Karimang Soebekty Tupelu</h3>
-        <!-->button onclick="myFunction()">Change</button-->
+        <!--button> onclick="myFunction()">Change</button-->
       </div>
       <div class="row">
         <p class="profesi">Web Programmer</p>
