--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <img src="src/fotoku.jpg" alt="" class="img-profile">
         </div>
       </div>
-      <div>class="row"> 
+      <div class="row"> 
         <h3 class="name">Atma Karimang Soebekty Tupelu</h3> 
       </div>
       <div class="row">
